--- a/project.html
+++ b/project.html
@@ -1,20 +1,111 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./project.css" />
-  </head>
-  <body>
-    <div class="toolbar">
-      <h1 id="toolbarText">포트폴리오</h1>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="./project.css">
+</head>
+<body>
+  <div class="titleBox">
+    <h1 class="titleText">
+      허성욱
+    </h1>
+    <p class="contents">Web Front-End & Android Developer</p>
+  </div>
+  <div class="aboutMe">
+    <p class="title">ABOUT ME</p>
+    <hr>
+    <p class="contents">
+      안녕하세요 저는 안드로이드 개발자 및 웹 프론트엔드 개발자 허성욱입니다 물론 안드로이드 개발을 주로 하고 있지만 <br> 
+      웹 개발도 조금씩 배워나가고 있습니다!
+    </p>
+  </div>
+  <div class="experience">
+    <p class="title">EXPERIENCE</p>
+    <hr>
+    <div class="career">
+      <p class="contents">
+        M.E.T.A 동아리 창업팀 
+      </p>
+      <p class="contents">
+        2024 - Now
+      </p>
     </div>
-    <div class="category">
-      <span id="tableitem">테이블 요소</span>
-      <span id="formitem">폼 요소</span>
-      <span id="listitem">리스트 요소</span>
+    <div>
+      <p class="detailContents">Flutter 개발</p>
+      <p class="detailContents">Web Front-End 수업</p>
     </div>
-    <h3 id="title1">구성 요소</h3>
-  </body>
+    <div class="career">
+      <p class="contents">
+        멋쟁이 사자처럼 앱스쿨 2기
+      </p>
+      <p class="contents">
+        2023 - 2024
+      </p>
+    </div>
+    <div>
+      <p class="detailContents">Kotlin을 활용한 Android 개발</p>
+    </div>
+    <div class="career">
+      <p class="contents">
+        명지전문대 영어비즈니스학과
+      </p>
+      <p class="contents">
+        2020 - Now
+      </p>
+    </div>
+  </div>
+  <div class="experience">
+    <p class="title">PROJECT</p>
+    <hr>
+    <div class="career">
+      <p class="contents">
+        ApartTalk 
+      </p>
+      <p class="contents">
+        2024 - Now
+      </p>
+    </div>
+    <div>
+      <p class="detailContents">Kotlin을 사용하여 아파트 입주민을 위한 커뮤니티 어플리케이션을 제작<br>
+      MVVM 패턴을 기반으로 개발을 진행하였으며 <br>카카오 로그인 API와 네이버 로그인 API등을 활용하여 사용자들의 편리한 
+      로그인을 구현하고자 했다 <br> 또한 Retrofit을 사용하여 아파트 인근의 편의 시설들을 사용자에게 보여주어
+      편의성을 제공하였다 <br> 나는 팀의 팀장으로서 Github 초기 작업을 진행하며 원활한 팀 활동을 위해 기여하였고<br>
+      팀원들의 의견을 조율하여 의견 충돌이 발생하지 않도록 노력함
+      </p>
+    </div>
+    <div class="career">
+      <p class="contents">
+        UniPiece
+      </p>
+      <p class="contents">
+        2023 - 2024
+      </p>
+    </div>
+    <div>
+      <p class="detailContents">
+        대학생들이 만든 작품을 판매하는 쇼핑몰 어플리케이션으로 <br>MVVM 패턴을 기반으로 제작하였으며
+        다양한 로그인 API를 사용하여 이용자들의 편리한 로그인을 제공함<br>나는 팀의 부팀장으로서
+        조용한 팀 분위기를 환기 시키기 위해 노력하였고 평소 디자인에 관심이 많아 어플 로고와 색을 만들어 사용하였다
+
+      </p>
+    </div>
+    <div class="career">
+      <p class="contents">
+        meebee
+      </p>
+      <p class="contents">
+        2024 - Now
+      </p>
+    </div>
+    <div>
+      <p class="detailContents">
+        미세먼지, 꽃가루 등 세세한 날씨 정보를 알려주는 어플리케이션으로서 <br>Retrofit을 활용하여 날씨 데이터를 받아와
+        사용자에게 보여주었고 <br>또한 여름에 사람들이 해수욕장을 많이 찾을 것이라 판단되어 <br>해수욕장의 정보와 파도 높이 등을 
+        사용자에게 제공한다 <br>아직 작업중에 있으며 출시를 목표로 개발을 진행하고있다
+      </p>
+    </div>
+  </div>
+</body>
 </html>
