--- a/project.html
+++ b/project.html
@@ -87,7 +87,7 @@
       <p class="detailContents">
         대학생들이 만든 작품을 판매하는 쇼핑몰 어플리케이션으로 <br>MVVM 패턴을 기반으로 제작하였으며
         다양한 로그인 API를 사용하여 이용자들의 편리한 로그인을 제공함<br>나는 팀의 부팀장으로서
-        조용한 팀 분위기를 환기 시키기 위해 노력하였고 평소 디자인에 관심이 많아 어플 로고와 색을 만들어 사용하였다
+        조용한 팀 분위기를 환기 시키기 위해 노력하였고 <br> 평소 디자인에 관심이 많아 어플 로고와 색을 만들어 사용하였다
 
       </p>
     </div>
